# wordclock-pico

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile copy  docker-compose.yml
include/: RTC.h  doubleregister.h  precomp.h  register.h  singleregister.h  word.h  wordclock.h
src/: RTC.cpp  doubleregister.cpp  main.cpp  register.cpp  singleregister.cpp  word.cpp  wordclock.cpp
